# OpenVM

./: .gitmodules  LICENSE  PROJECT_STRUCTURE.md  example.ovmb  exampleprog.ovmbtr  main.odin  meson.build  spec.html
Docs/: Opcodes.html  style.css
OpenVMDllLoader/: dll_loader.odin
OpenVMLibraryLoader/: dll_loader.odin
OpenVMLibraryLoader/Types/: types.odin
Subsystems/ExeptionSystem/: es.odin
Subsystems/FFI/: ffi.odin
Subsystems/IO/: io.odin
Subsystems/MemoryManager/: mm.odin
Tools/ovmbp/: ovmbp.py
VM/: Loader.h  Loader.odin  internal_binary_spec.txt
VM/src/: API.odin  BytecodeInterpreter.odin  Debug.odin  Memory.odin  Util.odin  VariableManager.odin  WindowsFixes.odin
VM/src/Interpreter/: ErrorChecker.odin  Interpreter.odin  InterpreterCore.odin  Tokenizer.odin
headers/: common_includes.h  dll_internal_util.h
headers/MemorySystem/: registers_manager.h  stack_manager.h
src/: common_includes.c
src/MemorySystem/: registers_manager.c  stack_manager.c
